# Django-jwt-boilerplate

./: .env.example  README.md  pyproject.toml
conf/: urls.py
conf/settings/: django.py  project.py
core/: managers.py
core/migrations/: 0002_alter_customuser_first_name.py
