[tool.poetry]
name = "django-jwt-boilerplate"
version = "0.1.0"
description = "A Django DRF JWT boiletplate for quicksetup using djoser"
authors = ["Sagargajare <sggajare360@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
djangorestframework = "^3.14.0"
djoser = "^2.2.0"
djangorestframework-simplejwt = "^5.3.0"
django-environ = "^0.11.2"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
